welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: not found: value nombre
		nombre=nombre+1
                ^averageValue:9: error: not found: value nombre
	resultat = sum + nombre
                         ^